layouts for pages and contraints fixes

--- a/app/src/main/res/layout/pilldispenser.xml
+++ b/app/src/main/res/layout/pilldispenser.xml
@@ -4,22 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="#C6EAE9">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#3D1A5C"
+        android:background="#102934"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="MediSync"
-        app:titleMarginStart="80dp"
-        app:titleTextColor="#ffff" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/set_up_health_details_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PillDispenser"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
+        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
+        app:layout_constraintHorizontal_bias="0.329"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar2"
+        app:layout_constraintVertical_bias="0.4"
+        tools:ignore="MissingConstraints" />
 
 
     <TextView
@@ -36,15 +49,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2"></TextView>
 
+
     <ImageView
-        android:id="@+id/logo"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="244dp"
+        android:layout_width="72dp"
+        android:layout_height="63dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/caduceus_symbol" />
-
 
     <ImageView
         android:id="@+id/imageView"
