--- a/app/src/main/res/layout/medminder.xml
+++ b/app/src/main/res/layout/medminder.xml
@@ -69,12 +69,13 @@
         app:layout_constraintTop_toBottomOf="@+id/medMinderTitle"
         tools:ignore="MissingConstraints" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/medicationLogButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="46dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="272dp"
+        android:background="@drawable/rounded_button"
         android:text="Medication Log"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/addMedicationButton"
@@ -108,11 +109,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/reminderSettingsButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
+        android:background="@drawable/rounded_button"
         android:layout_marginBottom="16dp"
         android:text="Reminder Settings"
         android:textSize="20sp"
